Fix GPS icon hidden under search in mobile view

--- a/src/app/components/search-location/search-location.component.scss
+++ b/src/app/components/search-location/search-location.component.scss
@@ -8,6 +8,7 @@ $search-comp-width: 60%;
   align-items: center;
   position: absolute;
   top: 60px;
+  right: 35px;
   z-index: 1000;
   width: 100%;
 
